--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "d3": "^7.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsdom": "^22.1.0",
     "mongodb": "^5.7.0",
