--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "d3": "^7.8.5",
     "dotenv": "^16.3.1",
@@ -21,6 +22,7 @@
     "jsdom": "^22.1.0",
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
