Switched to side tabs

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ dist/index.html
 dist/vite.svg
 dist/assets/index-10514455.css
 dist/assets/index-add72e19.js
+dist/index.html
+dist/vite.svg
+dist/assets/index-10514455.css
+dist/assets/index-add72e19.js
