--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
