Added tests from jest

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist/*
 dist-ssr
 server
 *.local
+__mocks__
 
 # Editor directories and files
 .vscode/*
@@ -25,10 +26,6 @@ server
 *.sln
 *.sw?
 .env*
-dist/index.html
-dist/vite.svg
-dist/assets/index-10514455.css
-dist/assets/index-add72e19.js
 dist/index.html
 dist/vite.svg
 dist/assets/index-10514455.css
