--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "concurrently 'npm:dev:frontend' 'npm:dev:backend'",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
@@ -19,6 +20,7 @@
     "d3": "^7.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest-environment-jsdom": "^29.6.2",
     "jsdom": "^22.1.0",
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
@@ -27,17 +29,40 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "babel-jest": "^29.6.2",
+    "babel-plugin-transform-import-meta": "^2.2.1",
     "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "gh-pages": "^5.0.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "react-test-renderer": "^18.2.0",
     "vite": "^4.4.0"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/__mocks__/browserMocks.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "d3": "<rootDir>/node_modules/d3/dist/d3.min.js"
+    }
   },
   "homepage": "https://kennethlam1997.github.io"
 }
